--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
     <header class="globalHeader">
       <form class="searchForm" method="get" action="https://www.baidu.com/s">
         <input name="wd" type="text" />
-        <button type="submit">搜索</button>
+        <button type="submit">Search</button>
       </form>
     </header>
 
